--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
-
+		"daemonalchemist/atp-core": "dev-master",
+		"zendframework/zend-session": "2.3.*"
     }
 }
